--- a/templates/base.html
+++ b/templates/base.html
@@ -23,102 +23,101 @@
         {% block head %}{% endblock %}
     </head>
     <body>
-        <div id="page">
 
-{% block navbar %}
-{% comment %}
-TODO: implement groups
-<form method="POST" id="group-change-form" class="hidden">
-    {% csrf_token %}
-    <input name="change_to_group" id="change_to_group" />
-    <input type="submit" />
-</form>
-{% endcomment %}
+        {% block navbar %}
+        {% comment %}
+        TODO: implement groups
+        <form method="POST" id="group-change-form" class="hidden">
+            {% csrf_token %}
+            <input name="change_to_group" id="change_to_group" />
+            <input type="submit" />
+        </form>
+        {% endcomment %}
 
-<div class="navbar">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="/">A+<sup><small>prototype</small></sup></a>
-            <div class="nav dropdown nav-collapse" id="course-menu">
-                <a href="#course-menu" class="brand dropdown-toggle" data-toggle="dropdown">
-                    {% block pagetitle %}
-                        {% trans "Select course" %}
-                    {% endblock %}
-                <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    {% render_course_list %}
-                </ul>
-            </div>
-            <div class="nav-collapse">
-                <ul class="nav pull-right">
-                    {% if user.is_authenticated %}
-                        <li><a>{% trans "Logged in as"%} {{ user.username }}.</a></li>
-                        {% comment %}
-                        TODO: implement groups
-                        <li class="dropdown" id="group-menu">
-                            <a href="#group-menu" class="dropdown-toggle" data-toggle="dropdown">
-                                {% if active_group %}
-                                    {{ active_group.name }}
-                                {% else %}
-                                    {% trans "No group selected"%}
-                                {% endif %}
-                            <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                {% if active_group %}
-                                    <li><a href="#" data-group-id="0" class="group_change_link">{% trans "No group" %}</a></li>
-                                    <li class="divider"></li>
-                                {% endif %}
-                                {% for group in user.get_profile.groups.all %}
-                                    <li><a href="#" data-group-id="{{ group.id }}" data-placement="left" rel="tooltip" title="{{ group.get_names }}" class="group_change_link">{{ group.name }}</a></li>
-                                {% empty %}
-                                    <li><a href="#">{% trans "No groups"%}</a></li>
-                                {% endfor %}
-                                <li class="divider"></li>
-                                <li><a href="{% url userprofile.views.view_groups %}">{% trans "Join or create a group"%}</a></li>
-                            </ul>
-                        </li>
-                        {% endcomment %}
-                        <li><a href="{% url logout %}">{% trans "Log out"%}</a></li>
-                    {% endif %}
-                </ul>
+        <div id="main-navbar" class="navbar navbar-static-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="brand" href="/">A+<sup><small>prototype</small></sup></a>
+                    <div class="nav dropdown nav-collapse collapse">
+                        <a href="#" class="brand dropdown-toggle" data-toggle="dropdown">
+                            {% block pagetitle %}
+                                {% trans "Select course" %}
+                            {% endblock %}
+                        <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            {% render_course_list %}
+                        </ul>
+                    </div>
+                    <div class="nav-collapse">
+                        <ul class="nav pull-right">
+                            {% if user.is_authenticated %}
+                                <li><a>{% trans "Logged in as"%} {{ user.username }}.</a></li>
+                                {% comment %}
+                                TODO: implement groups
+                                <li class="dropdown" id="group-menu">
+                                    <a href="#group-menu" class="dropdown-toggle" data-toggle="dropdown">
+                                        {% if active_group %}
+                                            {{ active_group.name }}
+                                        {% else %}
+                                            {% trans "No group selected"%}
+                                        {% endif %}
+                                    <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        {% if active_group %}
+                                            <li><a href="#" data-group-id="0" class="group_change_link">{% trans "No group" %}</a></li>
+                                            <li class="divider"></li>
+                                        {% endif %}
+                                        {% for group in user.get_profile.groups.all %}
+                                            <li><a href="#" data-group-id="{{ group.id }}" data-placement="left" rel="tooltip" title="{{ group.get_names }}" class="group_change_link">{{ group.name }}</a></li>
+                                        {% empty %}
+                                            <li><a href="#">{% trans "No groups"%}</a></li>
+                                        {% endfor %}
+                                        <li class="divider"></li>
+                                        <li><a href="{% url userprofile.views.view_groups %}">{% trans "Join or create a group"%}</a></li>
+                                    </ul>
+                                </li>
+                                {% endcomment %}
+                                <li><a href="{% url logout %}">{% trans "Log out"%}</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-{% endblock %}
-            <div id="main_content" class="container">
-                <div class="row">
-                    <div class="span12">
-                        <div class="page-header">
-                            {% block maintitle %}
-                            {% endblock %}
-                        </div>
+        {% endblock %}
+
+        <div id="main_content" class="container">
+            <div class="row">
+                <div class="span12">
+                    <div class="page-header">
+                        {% block maintitle %}
+                        {% endblock %}
                     </div>
                 </div>
-                {% block breadcrumb %}{% endblock %}
-                
-                {% block secondnav %}{% endblock %}
-                
-                {% include "widgets/messages.html" %}
-                
-                {% block content %}
-                    <div class="error">
-                        No content
-                    </div>
-                {% endblock %}
             </div>
-            {% block footer %}
-            <footer class="footer">
+            {% block breadcrumb %}{% endblock %}
 
-                <div class="container">
-                    <small>
-                        {% block footercontent %}{% endblock %}
-                        <p><a href="{% url privacy_policy %}">Privacy Policy</a></p>
-                    </small>
+            {% block secondnav %}{% endblock %}
+
+            {% include "widgets/messages.html" %}
+
+            {% block content %}
+                <div class="error">
+                    No content
                 </div>
-
-            </footer>
             {% endblock %}
         </div>
+        {% block footer %}
+        <footer class="footer">
+
+            <div class="container">
+                <small>
+                    {% block footercontent %}{% endblock %}
+                    <p><a href="{% url privacy_policy %}">Privacy Policy</a></p>
+                </small>
+            </div>
+
+        </footer>
+        {% endblock %}
     </body>
 </html>
