Correct classes to the labels.

--- a/templates/course/view.html
+++ b/templates/course/view.html
@@ -13,9 +13,9 @@
     <li>
         <a href="{{ instance.get_absolute_url }}">{{ instance.instance_name }}</a>
         {% if instance.is_open %}
-            <span class="label success">{% trans "Open" %}</span>
+            <span class="label label-success">{% trans "Open" %}</span>
         {% else %}
-            <span class="label warning">{% trans "Closed" %}</span>
+            <span class="label label-warning">{% trans "Closed" %}</span>
         {% endif %}
     </li>
 {% endfor %}
