--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,14 +65,26 @@ div#main-navbar .brand, div#main-navbar #user-status a {
  * FOOTER ********************************************************************
  *****************************************************************************/
 
-footer {
+div#base-container {
+    /* These are related to the fixed footer. */
+    min-height: 100%;
+    position: relative;
+}
+
+/* This one is for the fixed footer. */
+div#base-container > div#main_content {
+    padding-bottom: 60px;
+}
+
+div#base-container > footer {
     position: absolute;
     bottom: 0;
     width: 100%;
 
     /**
-     * The maximum height in pixels because we need to add padding to the block above the footer so they won't overlap.
-     * This if for approximately two lines of text.
+     * The maximum height in pixels because we need to add padding to the block
+     * above the footer so they won't overlap. This if for approximately two
+     * lines of text.
      */
     max-height: 60px;
 
@@ -84,14 +96,10 @@ footer {
     background: rgba(0,0,0,0.05);
 }
 
-/* This one is for the fixed footer. */
-div#main_content {
-    padding-bottom: 60px;
-}
-
-.footer p {
+footer p {
     color: #555555;
 }
+
 
 .rss-feed .entry-date {
     display: block;
