--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -6,9 +6,9 @@
 
 {% block coursecontent %}
 <div class="row">
-    <div class="span7">
+    <div id="course-schedule-container" class="span7">
         {# Settings collapse button. This needs to be here because we want it to float to the right of the header. #}
-        <a id="schedule-filters-btn" class="btn btn-link" data-toggle="collapse" data-target="#filters-collapse">Filter Categories</a>
+        <a id="schedule-filters-btn" class="btn" data-toggle="collapse" data-target="#filters-collapse">Filter Categories</a>
 
         <h2>{% trans "Schedule" %}</h2>
 
