This branch should now satisfy the functional requirements for the assistant feedback feature.
The assistant feedback is now always rendered before the grader
feedback. Initial grader and assistant feedback (if they exist)
is shown in assistants/teachers assess view.

--- a/templates/exercise/inspect_submission.html
+++ b/templates/exercise/inspect_submission.html
@@ -107,7 +107,7 @@
         <h2>{% trans "Feedback" %}</h2>
         <div class="well">
             {% if submission.assistant_feedback %}
-                <h2>Assitant feedback</h2>
+                <h2>Assistant feedback</h2>
                 {{ submission.assistant_feedback|sanitize }}
             {% else %}
                 <div class="alert alert-info">
