--- a/templates/exercise/view_submission.html
+++ b/templates/exercise/view_submission.html
@@ -16,7 +16,7 @@
     {% endif %}
     
     {% if submission.assistant_feedback %}
-        <h2>Assitant feedback</h2>
+        <h2>Assistant feedback</h2>
         {{ submission.assistant_feedback|sanitize }}
     {% else %}
         <div class="alert alert-info">
