Added new notification framework
It is now possible to add notifications to
users and notifications will be shown in user's
profile page. There is also an indicator in the top
bar if there are new notifications.

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,15 @@
                         <div class="nav-collapse">
                             <ul id="user-status" class="nav pull-right">
                                 {% if user.is_authenticated %}
+
+                                    {% if user.get_profile.get_unread_notification_count > 0 %}
+                                        <li><a href="{{ instance.get_absolute_url }}me/"><i class="icon-white icon-envelope"></i> 
+                                        {% blocktrans with count=user.get_profile.get_unread_notification_count count_p=user.get_profile.get_unread_notification_count|pluralize %}
+                                            {{ count }} new notification{{ count_p }}
+                                        {% endblocktrans %}
+                                        </a></li>
+                                    {% endif %}
+
                                     <li><a>{% trans "Logged in as"%} {{ user.username }}.</a></li>
                                     {% comment %}
                                     TODO: implement groups
