Modifications to notification framework
Notifications are now bound to specific course instances.
Also the notification menu is now a bit different, it shows
a pop-up menu for selecting the course.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,6 +118,35 @@ div#main-navbar .nav .dropdown-toggle:focus .caret {
     border-bottom-color: #b5e5ff;
 }
 
+#notification-menu {
+    right: auto;
+}
+
+div#main-navbar #notification-menu a {
+    color: #333333;
+}
+
+div#main-navbar #notification-menu a:hover {
+    color: #FFFFFF;
+}
+
+.navbar .nav > li > .dropdown-menu:before {
+    left: 9px;
+    right: auto;
+}
+
+.navbar .nav > li > .dropdown-menu:after {
+    left: 10px;
+    right: auto;
+}
+
+div#main-navbar #unread-notifications-icon {
+    background-color: #AA0000;
+}
+
+div#main-navbar #notification-icon {
+    background-color: transparent;
+}
 
 /*****************************************************************************
  * FOOTER ********************************************************************
