--- a/templates/course/_course_menu.html
+++ b/templates/course/_course_menu.html
@@ -23,23 +23,27 @@
             </a>
         </li>
     {% endfor %}
-
-    {% load for_lti %}
-    {% for_lti instance.pk %}
-    <li>
-        <a href="{% url lti_login.views.lti_login url_key %}" target="_blank">
-        <i class="{{ menu_icon_class }}"></i>
-        {{ menu_label }}
-        </a>
-	</li>
-	{% endfor %}
-
     <li>
         <a href="{{ instance.get_absolute_url }}me/">
             <i class="icon-user"></i>
             {{ user.get_profile.get_shortname }}
         </a>
     </li>
+
+    {% load lti_login_tags %}{% lti_login_entries instance.pk %}
+    {% if lti_menu_entries|length > 0 %}
+    	<li class="nav-header">
+    		{% trans "External" %}
+    	</li>
+    	{% for menu_entry in lti_menu_entries %}
+    		<li>
+        		<a href="{% url lti_login.views.lti_login menu_entry.id %}" target="_blank">
+        			<i class="{{ menu_entry.icon_class }}"></i>
+        			{{ menu_entry.label }}
+        		</a>
+			</li>
+		{% endfor %}
+	{% endif %}
 
     {# TODO: List categories here. Check commit 1148e0c for some existing code. #}
 
