--- a/templates/course/_course_menu.html
+++ b/templates/course/_course_menu.html
@@ -30,20 +30,21 @@
         </a>
     </li>
 
-    {% load lti_login_tags %}{% lti_login_entries instance.pk %}
-    {% if lti_menu_entries|length > 0 %}
-    	<li class="nav-header">
-    		{% trans "External" %}
-    	</li>
-    	{% for menu_entry in lti_menu_entries %}
-    		<li>
-        		<a href="{% url lti_login.views.lti_login menu_entry.id %}" target="_blank">
-        			<i class="{{ menu_entry.icon_class }}"></i>
-        			{{ menu_entry.label }}
-        		</a>
-			</li>
-		{% endfor %}
-	{% endif %}
+    {% load external_services_tags %}
+    {% ext_service_entries instance.pk %}
+    {% if ext_menu_entries|length > 0 %}
+        <li class="nav-header">
+            {% trans "External" %}
+        </li>
+        {% for menu_entry in ext_menu_entries %}
+            <li>
+                <a href="{{ menu_entry.url }}" target="_blank">
+                    <i class="{{ menu_entry.icon_class }}"></i>
+                    {{ menu_entry.label }}
+                </a>
+            </li>
+        {% endfor %}
+    {% endif %}
 
     {# TODO: List categories here. Check commit 1148e0c for some existing code. #}
 
