Submissions table filtering now works. Previously the scripts were included in the wrong place (before jquery was loaded)

--- a/templates/exercise/exercise_submissions.html
+++ b/templates/exercise/exercise_submissions.html
@@ -73,10 +73,13 @@
         </table>
     </div>
 </div>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/picnet.table.filter.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#submission-table').tableFilter();
-        });
-    </script>
+{% endblock %}
+
+{% block scripts %}
+            <script type="text/javascript" src="{{ STATIC_URL }}js/picnet.table.filter.min.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function() {
+                    $('#submission-table').tableFilter();
+                });
+            </script>
 {% endblock %}
