I think we're past prototype phase now.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <div id="main-navbar" class="navbar navbar-static-top">
                 <div class="navbar-inner">
                     <div class="container">
-                        <a class="brand" href="/">A+<sup><small>prototype</small></sup></a>
+                        <a class="brand" href="/">A+</a>
                         <div class="nav dropdown nav-collapse collapse">
                             <a href="#" class="brand dropdown-toggle" data-toggle="dropdown">
                                 {% block pagetitle %}
