--- a/templates/exercise/edit_exercise.html
+++ b/templates/exercise/edit_exercise.html
@@ -53,7 +53,9 @@
     
 </form>
 
+{% endblock %}
 
+{% block scripts %}
 <script type="text/javascript">
     $("#fetch-metadata").click(function() {
         $("#metadata-progress").show();
@@ -71,5 +73,4 @@
             })
     });
 </script>
-
 {% endblock %}
