Added ajax stats updater that can be triggered with post message.

--- a/templates/exercise/_exercise_info.html
+++ b/templates/exercise/_exercise_info.html
@@ -18,3 +18,5 @@
     <!--<dt>{% trans "Maximum group size" %}</dt>
     <dd>{{ exercise.max_group_size }}</dd>-->
 </dl>
+
+{% include "exercise/_exercise_statistics.html" %}
