--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -69,8 +69,14 @@
                         </small>
                     </h3>
                 </a>
-                <p><span class="dates">{{ course_module.opening_time }} &ndash; {{ course_module.closing_time }}</span></p>
-                 
+                <p>
+                    <span class="dates">{{ course_module.opening_time }} &ndash; {{ course_module.closing_time }}</span><br>
+                    <span class="dates">
+                    {% if course_module.late_submissions_allowed %}
+                        <em>Late submission are allowed until {{course_module.late_submission_deadline}} but points are only worth {{course_module.get_late_submission_point_worth}} %</em>.
+                        {% endif %}
+                    </span>
+                </p>
                 <div class="table-container">
                 	<div class="progress{% if round_summary.is_passed %} progress-success{% else %} progress-danger{% endif %} progress-striped" style="position: relative">
 		                <div class="bar" style="width: {{ round_summary.get_completed_percentage }}%;"
