--- a/templates/course/teachers_view.html
+++ b/templates/course/teachers_view.html
@@ -69,7 +69,7 @@
                 </div>
             </td>
         </tr>
-        {% for object in module.learning_objects.all %}
+        {% for object in module.get_exercises %}
             <tr>
                 <td>
                     {{ object.name }}
