--- a/templates/course/teachers_view.html
+++ b/templates/course/teachers_view.html
@@ -25,7 +25,7 @@
 <p>
     <a href="/admin/exercise/learningobjectcategory/"
        class="btn btn-primary btn-mini">
-        <i class="icon-plus-sign icon-white"></i> {% trans "Edit categories" %}
+        <i class="icon-edit icon-white"></i> {% trans "Edit categories" %}
     </a> (You need to be a superuser)
 </p>
 
@@ -103,7 +103,7 @@
     <i class="icon-plus-sign icon-white"></i> {% trans "Add Deadline Deviations" %}
 </a>
 <a href="{% url list_dl_deviations instance.id %}" class="btn btn-primary btn-mini">
-    <i class="icon-plus-sign icon-white"></i> {% trans "List Deadline Deviations" %}
+    <i class="icon-list-alt icon-white"></i> {% trans "List Deadline Deviations" %}
 </a>
 
 <div class="col-sm-10">
