Teacher's and assistants' view naming consistent in the menu and in the view

--- a/templates/course/_course_menu.html
+++ b/templates/course/_course_menu.html
@@ -77,7 +77,7 @@
        <li>
             <a href="{% url course.views.assistants_view course_url=instance.course.url instance_url=instance.url %}">
                 <i class="icon-pencil"></i>
-                {% trans "Assistant's view" %}
+                {% trans "Assistants' view" %}
             </a>
         </li>
     {% endif %}
