--- a/templates/course/teachers_view.html
+++ b/templates/course/teachers_view.html
@@ -3,7 +3,7 @@
 
 {% block coursecontent %}
 
-<h2>{% trans "Teachers' view" %}</h2>
+<h2>{% trans "Teacher's view" %}</h2>
 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
