--- a/exercise/templates/exercise/user_score.html
+++ b/exercise/templates/exercise/user_score.html
@@ -1,6 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
-{% load course_menu %}
+{% load exercise %}
 
 {% block coursecontent %}
 <div class="row">
