--- a/exercise/templates/exercise/staff/inspect_submission.html
+++ b/exercise/templates/exercise/staff/inspect_submission.html
@@ -1,6 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
-{% load exercise_info %}
+{% load exercise %}
 
 {% block coursecontent %}
 
