--- a/exercise/templates/exercise/staff/submission_assessment.html
+++ b/exercise/templates/exercise/staff/submission_assessment.html
@@ -1,6 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
-{% load exercise_info %}
+{% load exercise %}
 
 {% block coursecontent %}
 
